feat(product-api) : refactor products database
