# product-api/swagger.yaml
@@ -3,14 +3,14 @@ consumes:
     - application/json
 definitions:
     GenericError:
-        description: GenericError GenericError generic error
+        description: GenericError GenericError GenericError generic error
         properties:
             message:
                 description: message
                 type: string
                 x-go-name: Message
         type: object
-        x-go-package: kaungmyatkyaw2/product-api/sdk/models
+        x-go-package: github.com/Kaungmyatkyaw2/go-microservice/product-api/sdk/models
     Product:
         description: Product defines the strcture for an API product
         properties:
@@ -30,7 +30,7 @@ definitions:
                 x-go-name: Name
             price:
                 description: price
-                format: float
+                format: double
                 type: number
                 x-go-name: Price
             sku:
@@ -40,9 +40,9 @@ definitions:
         required:
             - id
         type: object
-        x-go-package: kaungmyatkyaw2/product-api/data
+        x-go-package: github.com/Kaungmyatkyaw2/go-microservice/product-api/data
     ValidationError:
-        description: ValidationError ValidationError validation error
+        description: ValidationError ValidationError ValidationError validation error
         properties:
             messages:
                 description: messages
@@ -51,7 +51,7 @@ definitions:
                 type: array
                 x-go-name: Messages
         type: object
-        x-go-package: kaungmyatkyaw2/product-api/sdk/models
+        x-go-package: github.com/Kaungmyatkyaw2/go-microservice/product-api/sdk/models
 info:
     description: Documentation for Product API
     title: of Product API
@@ -61,6 +61,13 @@ paths:
         get:
             description: Returns a list of products
             operationId: listProducts
+            parameters:
+                - description: |-
+                    Currency used when returning the price of the product,
+                    when not specified currency is returned in GBP.
+                  in: query
+                  name: Currency
+                  type: string
             responses:
                 "200":
                     $ref: '#/responses/productsResponse'
@@ -129,6 +136,12 @@ paths:
             description: Return a specific product by matched id
             operationId: getProductByID
             parameters:
+                - description: |-
+                    Currency used when returning the price of the product,
+                    when not specified currency is returned in GBP.
+                  in: query
+                  name: Currency
+                  type: string
                 - description: The id of the product for which the operation relates
                   format: int64
                   in: path
